# KernelScope

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  kscope.toml
bpf/: events.h  filters.h  kscope.bpf.c  maps.h
cmake/: BpfHelpers.cmake
docs/: architecture.md  compatibility.md  demo.md  event-model.md  performance.md  troubleshooting.md
examples/cpu_stress/: main.c
examples/futex_stress/: main.c
examples/io_stress/: main.c
examples/net_stress/: main.c
include/kscope/: api.hpp
scripts/: bench.sh  gen_skel.sh  gen_vmlinux.sh  run_workloads.sh
src/: main.cpp
src/bpf/: collector.cpp  collector.hpp  loader.cpp  loader.hpp  skeleton_bridge.cpp  skeleton_bridge.hpp
src/cli/: commands.cpp  commands.hpp  parse_args.cpp  parse_args.hpp
src/core/: aggregator.cpp  aggregator.hpp  classifications.cpp  classifications.hpp  event.hpp  event_decoder.cpp  event_decoder.hpp  histograms.cpp  histograms.hpp  windows.cpp  windows.hpp
src/export/: json_export.cpp  json_export.hpp  otel_export.cpp  otel_export.hpp  prometheus_export.cpp  prometheus_export.hpp
src/record/: format.cpp  format.hpp  recorder.cpp  recorder.hpp  replay.cpp  replay.hpp
src/symbolization/: elf_cache.cpp  elf_cache.hpp  proc_maps.cpp  proc_maps.hpp  stack_formatter.cpp  stack_formatter.hpp  symbolizer.cpp  symbolizer.hpp
src/tui/: app.cpp  app.hpp  screens.cpp  screens.hpp  tables.cpp  tables.hpp
src/util/: errors.cpp  errors.hpp  logging.cpp  logging.hpp  pidns.cpp  pidns.hpp  signal.hpp  time.cpp  time.hpp
test/integration/: run_all.sh
test/unit/: test_classifications.cpp  test_event_decoder.cpp  test_histograms.cpp  test_ksr_format.cpp
